; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gdft.c_gdImageStringTTF.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gdft.c_gdImageStringTTF.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @gdImageStringTTF(i32* %0, i32* %1, i32 %2, i8* %3, double %4, double %5, i32 %6, i32 %7, i8* %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca double, align 8
  %15 = alloca double, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i8*, align 8
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32 %2, i32* %12, align 4
  store i8* %3, i8** %13, align 8
  store double %4, double* %14, align 8
  store double %5, double* %15, align 8
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i8* %8, i8** %18, align 8
  %19 = load i32*, i32** %10, align 8
  %20 = load i32*, i32** %11, align 8
  %21 = load i32, i32* %12, align 4
  %22 = load i8*, i8** %13, align 8
  %23 = load double, double* %14, align 8
  %24 = load double, double* %15, align 8
  %25 = load i32, i32* %16, align 4
  %26 = load i32, i32* %17, align 4
  %27 = load i8*, i8** %18, align 8
  %28 = call i8* @gdImageStringFT(i32* %19, i32* %20, i32 %21, i8* %22, double %23, double %24, i32 %25, i32 %26, i8* %27)
  ret i8* %28
}

declare dso_local i8* @gdImageStringFT(i32*, i32*, i32, i8*, double, double, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
